<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="40dp">

    <TextView
        android:id="@+id/textView3"
        style="@style/EstiloLabel"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:text="@string/label1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/textView"
        style="@style/EstiloTitle"
        android:layout_width="284dp"
        android:layout_height="100dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/EstiloLabel"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/label1"
        app:layout_constraintBottom_toBottomOf="@+id/txtNum1"
        app:layout_constraintEnd_toEndOf="@+id/grupo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="130dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="132dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtNum1"
        app:layout_constraintVertical_bias="0.011" />

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="130dp"
        android:layout_height="217dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.015">

        <RadioButton
            android:id="@+id/rbSumar"
            android:layout_width="98dp"
            android:layout_height="36dp"
            android:text="@string/sumar" />

        <RadioButton
            android:id="@+id/rbRestar"
            android:layout_width="98dp"
            android:layout_height="35dp"
            android:text="@string/restar" />

        <RadioButton
            android:id="@+id/rbDividir"
            android:layout_width="98dp"
            android:layout_height="37dp"
            android:text="@string/dividir" />

        <RadioButton
            android:id="@+id/rbMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/multiplicar" />

        <RadioButton
            android:id="@+id/rbPotencia"
            android:layout_width="127dp"
            android:layout_height="35dp"
            android:text="@string/potencia" />

        <RadioButton
            android:id="@+id/rbRaiz"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/raiz" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="189dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnMostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        style="@style/EstiloLabel"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:text="@string/label2"
        app:layout_constraintEnd_toStartOf="@+id/txtNum2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="35dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/grupo"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/grupo"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/grupo"
        app:layout_constraintTop_toBottomOf="@+id/btnLimpiar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/mostrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/grupo"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar"
        app:layout_constraintVertical_bias="0.078" />

</androidx.constraintlayout.widget.ConstraintLayout>